fix video overflow

--- a/src/Components/VideoSide/VideoSide.css
+++ b/src/Components/VideoSide/VideoSide.css
@@ -1,5 +1,6 @@
 .video-side {
     margin: 0;
+    overflow: hidden;
 }
 
 .youtube-container {
